# atmos_native_ss14

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
include/: atmos_api.h  atmos_internal.h  atmos_simd.h  atmos_types.h
res/: AtmosNative.cs
src/: atmos_core.cpp  gases.cpp  hotspot.cpp  linda.cpp  monstermos.cpp  reactions.cpp  superconductivity.cpp
tests/: CMakeLists.txt  test_common.h  test_gases.cpp  test_hotspot.cpp  test_integration.cpp  test_linda.cpp  test_monstermos.cpp  test_performance.cpp  test_reactions.cpp  test_simd.cpp  test_superconductivity.cpp
